# bex

./: .env  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/models/: mod.rs  page.rs  resp.rs
common/src/utils/: mod.rs  page.rs  string.rs
oauth2/: Cargo.toml
oauth2/src/: lib.rs  main.rs
oauth2/src/handler/: mod.rs  oauth.rs  user.rs
oauth2/src/middleware/: authentication.rs
oauth2/src/models/: mod.rs  permission.rs  role.rs  token.rs  user.rs
oauth2/src/repository/: mod.rs  oauth.rs  token.rs  user.rs
oauth2/src/service/: mod.rs  oauth.rs  user.rs
