[package]
name = "oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
axum = { version = "^0.5", features = ["headers"] }
sqlx = { version = "^0.5", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
] }

# futures = "0.3"
# futures-util = "0.3"
http = "0.2"
tower = { version = "0.4"}
# tower-http = {version = "0.2.5", features = ["auth"]}
hyper = "0.14"
headers = "0.3"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }

# mime_guess = { version = "^2" }

# 前后端一起打包
# rust-embed="6"

anyhow = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenv = "0.15"

common = { path = "../common" }
